--- a/source/_posts/分布式锁的3种实现.md
+++ b/source/_posts/分布式锁的3种实现.md
@@ -7,8 +7,6 @@ description: 分布式锁的使用
 copyright: true
 ---
 
-
-
 # 一、分布式锁
 
 ### 1、为什么要使用分布式锁
@@ -19,7 +17,7 @@ copyright: true
 
 ​	后续业务发展，需要做集群，一个应用需要部署好几台机器然后做负载均衡。
 
-![](images/分布式锁的场景.png)
+![](分布式锁的3种实现/分布式锁的场景.png)
 
 一个共享变量A，存在JVM1，JVM2，JVM3，这3个JVM内存中，这个变量A主要体现是在一个类中的一个成员变量，是一个有状态的对象。
 
@@ -161,7 +159,7 @@ SET resource_name_value NX PX 30000
 
 ​	Zookeeper中有节点的概念，Zk的数据存储结构就像一棵树，这棵树由节点组成，节点叫Znode，有点类似Linux的文件系统结构。
 
-![](/home/victor/桌面/个人md/images/zookeeper节点结构.jpeg)
+![](分布式锁的3种实现/zookeeper节点结构.jpeg)
 
 ​	Znode有4种类型：
 
@@ -173,17 +171,17 @@ SET resource_name_value NX PX 30000
 
   顺序节点，就是在创建节点的时候，zk根据创建的时间顺序给该节点名称进行编号。
 
-  ![](/home/victor/桌面/个人md/images/zookeeper中的顺序节点.jpeg)
+  ![](分布式锁的3种实现/zookeeper中的顺序节点.jpeg)
 
 - 临时节点Ephemeral
 
   和持久节点相反，当创建节点的客户端与zk断开后，临时节点会被删除。
 
-![](images/zookeeper创建临时节点.jpeg)
+![](分布式锁的3种实现/zookeeper创建临时节点.jpeg)
 
-![](images/创建节点的客户端与zk断开.jpeg)
+![](../../../桌面/md/images/创建节点的客户端与zk断开.jpeg)
 
-![](images/临时节点会被删除.jpeg)
+![](分布式锁的3种实现/临时节点会被删除.jpeg)
 
 - 临时顺序节点（Ephemeral_Sequential）
 
@@ -197,32 +195,32 @@ Zk分布式锁使用的是临时顺序节点，也就是客户端断开连接后
 
   - 首先在zk中创建一个持久节点ParentLock，当第一个客户端想要获取锁的时候，需要在ParentLock这个节点下面创建临时顺序节点Lock1。
 
-  ![](images/zk的分布式锁：获取锁.jpeg)
+  ![](分布式锁的3种实现/zk的分布式锁：获取锁.jpeg)
 
   
 
   - Client1查找ParnentLock下面所有的临时顺序节点并排序，然后判断自己创建的节点Lock1是不是顺序最靠前的一个节点。如果是第一个节点，就成功获取锁。
 
-  ![](images/判断自己创建的节点是不是第一个.jpeg)
+  ![](分布式锁的3种实现/判断自己创建的节点是不是第一个.jpeg)
 
   - 这个时候，再有一个客户端Client2前来获取锁，首先在ParentLock下再创建一个临时顺序节点Lock2
 
-  ![](images/再有一个客户端Client2来获取锁，先创建自己的临时顺序节点Lock2.jpeg)
+  ![](分布式锁的3种实现/再有一个客户端Client2来获取锁，先创建自己的临时顺序节点Lock2.jpeg)
 
   - Client2查找ParnentLock下面所有的临时顺序节点并排序，判断它自己创建的节点Lock2是不是顺序最靠前的一个，结果发现节点Lock2并不是最小的。于是，Client2向排序仅仅比他靠前的节点Lock1注册Watcher，用来监听Lock1节点是否存在。这意味者此时Client2抢锁失败，进入了等待状态。
 
-  ![](images/Client2向比他靠前的Lock1注册Watcher，意味着抢锁失败，进入等待状态.jpeg)
+  ![](分布式锁的3种实现/Client2向比他靠前的Lock1注册Watcher，意味着抢锁失败，进入等待状态.jpeg)
 
   - 假如这个时候，又有一个客户端Client3前来获取锁，则在ParentLock下再创建一个临时顺序节点Lock3
 
-  ![](images/又来一个Client3来获取锁，则先在ParentLock中创建一个临时顺序节点.jpeg)
+  ![](分布式锁的3种实现/又来一个Client3来获取锁，则先在ParentLock中创建一个临时顺序节点.jpeg)
 
   - Client3查找ParentLock下面所有的临时顺序节点并排序，判断自己所创建的节点Lock3是不是顺序最靠前的一个，结果同样发现节点Lock3并不是最小的。
 
     于是，Client3向排序仅仅比他靠前的节点Lock2注册Watcher，用来监听Lock2节点是否存在，这意味这Client3同样抢锁失败，进入了等待状态。
 
-    ![](images/Client3向比自己靠前的节点Lock2注册Watcher，抢锁失败，进入等待状态.jpeg)
-  
+    ![](分布式锁的3种实现/Client3向比自己靠前的节点Lock2注册Watcher，抢锁失败，进入等待状态.jpeg)
+
   - 这样就形成了，Client1获取了锁，Client2监听了Lock1，Client3监听额Lock2。从而形成了一个等待队列，很像Java中ReentrantLock所依赖的。
 
 - 释放锁
@@ -231,21 +229,21 @@ Zk分布式锁使用的是临时顺序节点，也就是客户端断开连接后
 
     当任务完成后，Client1会显示调用删除节点Lock1的指令。
 
-    ![](images/Client1任务完成，会删除节点Lock1.jpeg)
+    ![](分布式锁的3种实现/Client1任务完成，会删除节点Lock1.jpeg)
 
   - 2、任务执行过程中，客户端崩溃
 
     得到锁的Client1在执行任务过程中，突然挂了，则会断开与Zk服务端的连接，根据临时节点的特性，它自己创建的节点也会被自动删除。
 
-    ![](images/Client1运行中突然挂了，则zk会自动删除它的节点.jpeg)
+    ![](分布式锁的3种实现/Client1运行中突然挂了，则zk会自动删除它的节点.jpeg)
 
     由于Client2一直监听者Lock1的存在状态，当Lock1节点被删除后，Client2会立刻得到通知，这时候Client2会再次查ParentLock下面的所有节点，确认自己创建的节点Lock22是不是目前最小的节点，如果是最小，则Client2就成功获取了锁。
 
-    ![](images/Client2监听Lock1的节点存在状态，Lock1节点被删除，Client2会立刻得到通知，然后client2在查询ParentLock下面所有节点并排序，确保自己创建的节点是第一个.jpeg)
+    ![](分布式锁的3种实现/Client2监听Lock1的节点存在状态，Lock1节点被删除，Client2会立刻得到通知，然后client2在查询ParentLock下面所有节点并排序，确保自己创建的节点是第一个.jpeg)
 
     同理，如果Client2也因为任务完成或者节点崩溃而删除了Lock2，那么Client3会收到通知。
 
-    ![](images/同理Client3.jpeg)
+    ![](分布式锁的3种实现/同理Client3.jpeg)
 
     最终，Client3成功获取锁。
 
