--- a/source/_posts/消息队列.md
+++ b/source/_posts/消息队列.md
@@ -1,8 +1,8 @@
 ---
 title: 消息队列
-date: 2018.05.01 10:06
+date: 2017.03.01 10:06
 tags:
-  - Java
+  - 大数据
 description: 消息队列
 toc: true
 copyright: true
